<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMealActivity">

    <TextView
        android:id="@+id/addMealLabelTextView"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:text="@string/add_meal_page"
        android:textAlignment="center"
        android:textSize="75sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mealNameLabelTextView"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="42dp"
        android:text="@string/meal_name"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMealLabelTextView" />

    <EditText
        android:id="@+id/enterMealInputEditText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mealNameLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/addMealLabelTextView"
        android:inputType="text"
        android:hint="@string/enter_meal_name"/>

    <TextView
        android:id="@+id/proteinLabelTextView"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:text="@string/protein"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMealLabelTextView" />

    <EditText
        android:id="@+id/enterProteinInputEditText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:hint="@string/enter_protein_in_grams"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/mealNameLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/addMealLabelTextView" />

    <TextView
        android:id="@+id/carbsLabelTextView"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:text="@string/carbs"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMealLabelTextView" />

    <EditText
        android:id="@+id/enterCarbsInputEditText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:hint="@string/enter_carbs_in_grams"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/mealNameLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/addMealLabelTextView" />

    <TextView
        android:id="@+id/fatsLabelTextView"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="284dp"
        android:text="@string/fats"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMealLabelTextView" />

    <EditText
        android:id="@+id/enterFatsInputEditText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="284dp"
        android:hint="@string/enter_fats_in_grams"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/mealNameLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/addMealLabelTextView" />

    <TextView
        android:id="@+id/caloriesLabelTextView"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="356dp"
        android:text="@string/calories"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMealLabelTextView" />

    <EditText
        android:id="@+id/enterCaloriesInputEditText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="356dp"
        android:hint="@string/enter_calories"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/mealNameLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/addMealLabelTextView" />

    <TextView
        android:id="@+id/ingredientsLabelTextView"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:text="@string/ingredients"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caloriesLabelTextView" />

    <CheckBox
        android:id="@+id/chickenCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chicken"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsLabelTextView" />

    <CheckBox
        android:id="@+id/beefCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:text="@string/beef"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsLabelTextView" />

    <CheckBox
        android:id="@+id/fishCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:text="@string/fish"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsLabelTextView" />

    <CheckBox
        android:id="@+id/riceCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:text="@string/rice"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsLabelTextView" />

    <CheckBox
        android:id="@+id/greensACheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/greens_a"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsLabelTextView" />

    <CheckBox
        android:id="@+id/greensBCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="64dp"
        android:text="@string/greens_b"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsLabelTextView" />

    <CheckBox
        android:id="@+id/greensCCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="64dp"
        android:text="@string/greens_c"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsLabelTextView" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:text="@string/submit"
        android:textColor="#008000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/greensCCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/enterCaloriesInputEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>